[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiv-rl-env"
version = "0.1.0"
description = "HIV Drug Sequencing RL Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0"
]